# fin-trade-extract-nosubs

./: .gitignore  LICENSE  S3 Connection Settings Reminders.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: arrests.md  commit.prompt.md
.github/skills/repo-management/: python-project-management.md
.github/workflows/: debug_secrets.yml  fbi_arrests_national_etl.yml  fbi_arrests_state_etl.yml  fred_watermark_etl.yml  sec_filings_eda.yml
config/: fred_series.yml
docs/: API_Listings.txt  architecture.md
scripts/: setup_github_secrets.sh
scripts/eda/: fbi_data_explore.py  sec_explore.py  yfinance_explore.py
scripts/etl/: create_arrest_watermark.py  create_fbi_metadata.py  fetch_fbi_agencies.py  fetch_fbi_arrests_national.py  fetch_fbi_arrests_state.py  fetch_fred_watermark.py
scripts/github_actions/: snowflake_run_sql_file.py
snowflake/runbooks/: load_fbi_agencies_from_s3.sql  load_fbi_arrests_national_from_s3.sql  load_fbi_arrests_state_from_s3.sql  load_fred_from_s3.sql  merge_fbi_agencies_raw_to_curated.sql  merge_fbi_arrests_national_raw_to_curated.sql  merge_fbi_arrests_state_raw_to_curated.sql  merge_fred_raw_to_curated.sql  suspend_warehouse.sql
